--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,37 +1,26 @@
-/*
-essential styles:
-these make the slideshow work
-*/
 .slides {
   position: relative;
-  height: 150px;
+  height: 100vh;
   padding: 0;
   margin: 0;
   list-style-type: none;
-  margin-bottom: 20px;
 }
 
 .slide {
   position: absolute;
   left: 0;
   top: 0;
-  bottom: 0;
-  right: 0;
   opacity: 0;
   z-index: -999;
-  -webkit-transition: opacity 0.25s;
-  -o-transition: opacity 0.25s;
-  transition: opacity 0.25s;
+  -webkit-transition: opacity 1s;
+  -o-transition: opacity 1s;
+  transition: opacity 1s;
 }
 
 .active {
   opacity: 1;
 }
 
-/*
-non-essential styles:
-just for appearance; change whatever you want
-*/
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
@@ -40,53 +29,49 @@ body {
 }
 
 .container {
-  max-width: 992px;
-  padding: 0 20px;
-  margin: auto;
+  max-width: 1920px;
+  padding: 0;
 }
 
 .slide {
-  font-size: 40px;
-  padding: 50px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   background: #333;
-  color: #fff;
-  text-align: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  background-position: 50% 50%;
 }
 
 .slide:nth-of-type(1) {
-  background: red;
+  background-image: url("../img/photo_1.jpg");
 }
 
 .slide:nth-of-type(2) {
-  background: orange;
+  background-image: url("../img/photo_2.jpg");
 }
 
 .slide:nth-of-type(3) {
-  background: green;
+  background-image: url("../img/photo_3.jpg");
 }
 
 .slide:nth-of-type(4) {
-  background: blue;
+  background-image: url("../img/photo_4.jpg");
 }
 
 .slide:nth-of-type(5) {
-  background: purple;
+  background-image: url("../img/photo_5.jpg");
 }
 
 .controls {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 10px;
-  margin-bottom: 20px;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
 }
 
 .control {
-  padding: 10px 20px;
-  background-color: gray;
-  display: block;
+  font-size: 50px;
   cursor: pointer;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -94,25 +79,108 @@ body {
           user-select: none;
 }
 
-.indicators {
+.control-prev,
+.control-next,
+.control-pause {
+  position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.control-prev {
+  height: 100%;
+  left: 0;
+  color: rgba(255, 255, 255, 0.3);
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  width: 8%;
+}
+.control-prev:hover {
+  color: white;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0)));
+  background: -o-linear-gradient(left, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
+}
+
+.control-next {
+  height: 100%;
+  width: 8%;
+  right: 0;
+  color: rgba(255, 255, 255, 0.3);
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+}
+.control-next:hover {
+  color: white;
+  background: -webkit-gradient(linear, right top, left top, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0)));
+  background: -o-linear-gradient(right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
+  background: linear-gradient(to left, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
+}
+
+.control-pause {
+  position: absolute;
+  top: 40%;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 150px;
+  left: calc(50% - 10vh);
+  opacity: 0;
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
+}
+.control-pause:hover {
+  opacity: 1;
+}
+
+.indicators {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 10px;
-  margin-bottom: 20px;
 }
 
 .indicator {
-  width: 30px;
-  height: 30px;
-  border-radius: 15px;
-  background-color: blue;
+  width: 20px;
+  height: 20px;
+  border: 3px solid rgba(255, 255, 255, 0.2);
+  border-radius: 50%;
   cursor: pointer;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+}
+.indicator:hover {
+  -webkit-box-shadow: 0 0 8px #ffffff;
+          box-shadow: 0 0 8px #ffffff;
+  border: 3px solid rgba(255, 255, 255, 0.8);
 }
 .indicator.active {
-  background-color: green;
+  -webkit-box-shadow: 0 0 8px #ffffff;
+          box-shadow: 0 0 8px #ffffff;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+.indicator.active:hover {
+  background-color: rgba(255, 255, 255, 0.8);
 }
